fix width on mobile

--- a/components/slides/domstol/NumberSlide/Number.module.scss
+++ b/components/slides/domstol/NumberSlide/Number.module.scss
@@ -46,12 +46,12 @@
         top: 300px;
         height: 100px;
         left: 10px;
-        font-size: 4rem;
+        font-size: 4.5rem;
     }
 
     .text1 {
-        width: 20.625rem;
-        font-size: 1.5rem;
+        width: 18rem;
+        font-size: 1.4rem;
         position: sticky;
         top: 380px;
         height: 50px;
@@ -59,8 +59,8 @@
     }
 
     .text2 {
-        width: 20.625rem;
-        font-size: 1.5rem;
+        width: 18rem;
+        font-size: 1.4rem;
         height: 100px;
         position: sticky;
         top: 450px;
